tests/semantica/valid/asignacion/test2.ctds
program
	{
		integer x = 0;
		

		void main() {
			integer y = 2;

			x = 2 + y;
		}
	}